// Vitest Snapshot v1

exports[`ListContainer > should render all the items 1`] = `
<div>
  <ul
    class="HvListContainer-root"
  >
    <li
      class="HvListItem-root HvListItem-gutters css-1c669w2-StyledListItem e180q0291"
      role="option"
    >
      Item 1
    </li>
    <li
      class="HvListItem-root HvListItem-gutters css-1c669w2-StyledListItem e180q0291"
      role="option"
    >
      Item 2
    </li>
    <li
      class="HvListItem-root HvListItem-gutters css-1c669w2-StyledListItem e180q0291"
      role="option"
    >
      Item 3
    </li>
  </ul>
</div>
`;

exports[`ListContainer > should render correctly 1`] = `
<div>
  <ul
    class="HvListContainer-root"
  />
</div>
`;
